@@ -80,6 +80,8 @@ trans: $(TRANSSOS)
 srcs: $(TRANSCSRCS)
 
 <%=transvpath_prefix%>.trans<%=transvpath_prefix%>.c:
+	$(ECHO) generating table from $@
+	$(Q) \
 	$(MINIRUBY) "$(srcdir)/tool/transcode-tblgen.rb" -vo "$@" "$<"
 
 % unless encs.empty? or trans.empty?
@@ -104,23 +106,36 @@ $(TRANSOBJS): ruby.h intern.h config.h defines.h missing.h encoding.h oniguruma.
 % dependencies.each do |e|
 %   obj = "enc/#{e}.$(OBJEXT)"
 %   df = ("enc/#{e}.def" if deffile)
-$(ENCSODIR)/<%=e%>.$(DLEXT): <%=obj%>
+%   target = e.dup
+%   if target.sub!(/\Atrans\//, '$(TRANSSODIR)/')
+%     mesg = "transcoder"
+%   else
+%     target = "$(ENCSODIR)/#{e}"
+%     mesg = "encoding"
+%   end
+<%=target%>.$(DLEXT): <%=obj%>
+	$(ECHO) linking <%=mesg%> $(@F)
 %   cmd = link_so.sub(/\$\(OBJS\)/) {obj}
 %   base = File.basename(e)
 %   cmd.sub!(/(?=\$\(DLDFLAGS\))/) {dldflags.sub(/\$\(TARGET\)/) {base} + " "} if dldflags
 %   if df
+	$(Q) \
 	echo> <%=df%> EXPORTS
+	$(Q) \
 	echo>> <%=df%> <%=EXPORT_PREFIX%>Init_<%=base%>
 %     cmd.sub!(/\$\(DEFFILE\)/) {df}
 %     cmd.gsub!(/-(?:implib|pdb):/) {|s|"#{s}enc/#{e.sub(/[^\/]+\z/, '')}"}
 %   end
 	@$(MAKEDIRS) "$(@D)"
+	$(Q) \
 	<%=cmd%>
 
 % end
 % dependencies.each do |e|
 <%="enc/#{e}.$(OBJEXT)"%>: <%="$(encsrcdir)/#{e}.c"%>
 	-@$(MAKEDIRS) "$(@D)"
+	$(ECHO) compiling <%= "#{e}.c"%>
+	$(Q) \
 	<%=COMPILE_C.gsub(/\$(\()?<(\:[^)]+)?(\))?/){"$(encsrcdir)/#{e}.c"}%>
 
 % end
